--- a/twins.html
+++ b/twins.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>HAPPY 21 BDAY!</title>
+<title>HAPPY 21ST BDAY! 🥳</title>
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;600;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -46,18 +46,6 @@
 
   .note{
   position:absolute;
-  bottom:12%;
-  left:50%;
-  transform:translateX(-50%);
-  text-align:center;
-  font-size:clamp(10px, 2.5vw, 14px);
-  opacity:0.85;
-  color:#fff;
-  line-height:1.3;
-  pointer-events:none; /* so clicking still hits smiskis */
-}
-.note{
-  position:absolute;
   bottom:10%;
   left:50%;
   transform:translateX(-50%);
@@ -68,6 +56,7 @@
   line-height:1.3;
   pointer-events:none; /* so clicking still hits smiskis */
 }
+
 
   /* ==== Smiski (wrapped so sparkles & clicks don’t block image) ==== */
   .smiski-wrap{
@@ -203,10 +192,28 @@ radial-gradient(1.26vw 1.26vw at 96% 40%, var(--cream2) 98%, #0000);
   }
 
   /* ==== Confetti (full page) ==== */
-  .confetti{ position:fixed; inset:0; overflow:visible; pointer-events:none; z-index:500 }
-  .confetti i{ position:absolute; top:-10vh; width:8px; height:14px; opacity:.9; background:var(--accent);
-               transform:rotate(15deg); animation: fall linear forwards }
-  @keyframes fall{ to{ transform: translateY(110vh) rotate(360deg) } }
+/* Confetti container (keep as-is if you already have it) */
+.confetti{ position:fixed; inset:0; pointer-events:none; overflow:visible; z-index:500 }
+
+/* Each piece is an <i> we style per-piece via JS */
+.confetti i{
+  position:absolute; top:-10vh;
+  opacity:.95;
+  will-change: transform, opacity;
+}
+
+/* gentle fall with sway (used for rain) */
+@keyframes fall-sway {
+  0%   { transform: translate(var(--x,0px), -10vh) rotate(0deg); }
+  100% { transform: translate(calc(var(--x,0px) + var(--drift, 0px)), 110vh) rotate(var(--rot, 360deg)); }
+}
+
+/* subtle ribbon wobble (applied to long rectangles) */
+@keyframes ribbon-wobble {
+  0%,100% { transform: rotate(var(--r,0deg)) skewX(0deg); }
+  50%     { transform: rotate(calc(var(--r,0deg) + 8deg)) skewX(6deg); }
+}
+
 
   /* ==== Mobile tweaks ==== */
   @media (max-width: 480px){
@@ -275,49 +282,136 @@ radial-gradient(1.26vw 1.26vw at 96% 40%, var(--cream2) 98%, #0000);
 <script>
   /* Confetti */
   const confetti = document.getElementById("confetti");
-  const COLORS = ["#ffd166","#ef476f","#06d6a0","#118ab2","#ffe66d","#b388ff","#9cff9c","#ff9f1c"];
-  function dropConfetti(count=100){
-    const w = window.innerWidth;
-    for(let i=0;i<count;i++){
-      const bit = document.createElement("i");
-      bit.style.left = (Math.random()*w) + "px";
-      bit.style.background = COLORS[i % COLORS.length];
-      bit.style.animationDuration = (3 + Math.random()*3) + "s";
-      confetti.appendChild(bit);
-      setTimeout(()=>bit.remove(), 6500);
-    }
+
+/* colors + shapes */
+const COLORS = ["#ffd166","#ef476f","#06d6a0","#118ab2","#b388ff","#ff9f1c","#ffe66d","#9cff9c"];
+const SHAPES = ["square","circle","triangle","ribbon"]; // natural variety
+
+/* utils */
+const rand = (min, max) => Math.random() * (max - min) + min;
+const pick = arr => arr[Math.floor(Math.random()*arr.length)];
+
+/* create one piece (optionally starting at x,y) */
+function makePiece(x=null, y=null){
+  const el = document.createElement("i");
+
+  // size / shape
+  const shape = pick(SHAPES);
+  let w, h;
+  if (shape === "ribbon") {           // long skinny ribbon
+    w = rand(6,12); h = rand(28,46);
+  } else if (shape === "triangle") {  // triangles approximately 10–16
+    w = h = rand(10,16);
+  } else {                            // square/circle 8–14
+    w = rand(8,14); h = w;
   }
-  function pointConfetti(x, y, count = 60){
+
+  el.style.width  = `${w}px`;
+  el.style.height = `${h}px`;
+  el.style.background = (shape === "triangle") ? "transparent" : pick(COLORS);
+
+  // position
+  if (x == null) {
+    // rain: start at random X along viewport
+    el.style.left = `${rand(0, window.innerWidth)}px`;
+    el.style.top  = `-10vh`;
+  } else {
+    // burst: start at click
+    el.style.left = `${x}px`;
+    el.style.top  = `${y}px`;
+  }
+
+  // shape styling
+  if (shape === "circle") {
+    el.style.borderRadius = "50%";
+  } else if (shape === "triangle") {
+    // make a triangle with clip-path
+    el.style.clipPath = "polygon(50% 0%, 0% 100%, 100% 100%)";
+    el.style.background = pick(COLORS);
+  } else if (shape === "ribbon") {
+    el.style.borderRadius = "6px";
+    // give a glossy look using a gradient
+    const c = pick(COLORS);
+    el.style.background = `linear-gradient(${rand(0,180)}deg, ${c}, ${c}cc)`;
+    // wobble animation layered on top of movement
+    el.style.animation = `ribbon-wobble ${rand(500,900)}ms ease-in-out infinite`;
+    el.style.setProperty("--r", `${rand(-25,25)}deg`);
+  } else {
+    // square | rounded squircle
+    if (Math.random() < 0.5) el.style.borderRadius = "4px";
+  }
+
+  return el;
+}
+
+/* ===== RAIN on page load ===== */
+function rainConfetti(count = 180){
   for(let i=0;i<count;i++){
-    const bit = document.createElement("i");
-    bit.style.left = x + "px";
-    bit.style.top  = y + "px";
+    const bit = makePiece();
+    const duration = rand(3.5, 6);  // seconds
+    // drift + rotation params (set as CSS variables for keyframes)
+    bit.style.setProperty("--x", "0px");
+    bit.style.setProperty("--drift", `${rand(-140, 140)}px`);
+    bit.style.setProperty("--rot", `${rand(180, 720)}deg`);
+    bit.style.animation = `fall-sway ${duration}s linear forwards`;
+    // staggered start
+    bit.style.animationDelay = `${rand(0, 1.2)}s`;
+    confetti.appendChild(bit);
+    setTimeout(()=>bit.remove(), (duration + 1.3) * 1000);
+  }
+}
 
-    bit.style.background = COLORS[i % COLORS.length];
-    bit.style.width = "8px";
-    bit.style.height = "14px";
-    bit.style.position = "absolute";
+/* ===== BURST from click/tap point (circular scatter) ===== */
+function burstConfetti(x, y, count = 70){
+  for(let i=0;i<count;i++){
+    const bit = makePiece(x, y);
+    const angle = Math.random() * Math.PI * 2;
+    const radius = Math.sqrt(Math.random()) * 260; // uniform disc
+    const dx = Math.cos(angle) * radius;
+    const dy = Math.sin(angle) * radius;
 
-    const dx = (Math.random() - 0.5) * 300;   // horizontal scatter
-    const dy = (Math.random() - 0.5) * 300;   // vertical scatter
-    const duration = 0.4 + Math.random() * 1.2;
+    const rot = rand(180, 1080);
+    const dur = rand(500, 1100); // ms
 
     bit.animate(
       [
-        { transform:`translate(0, 0) rotate(0deg)`, opacity:1 },
-        { transform:`translate(${dx}px, ${dy}px) rotate(360deg)`, opacity:0 }
+        { transform: "translate(0px, 0px) rotate(0deg)", opacity: 1 },
+        { transform: `translate(${dx}px, ${dy}px) rotate(${rot}deg)`, opacity: 0.05 }
       ],
-      {
-        duration: duration * 1000,
-        easing: "ease-out",
-        fill: "forwards"
-      }
+      { duration: dur, easing: "cubic-bezier(.15,.65,.3,1)", fill: "forwards" }
     );
 
     confetti.appendChild(bit);
-    setTimeout(()=> bit.remove(), duration * 1000 + 50);
+    setTimeout(()=>bit.remove(), dur + 60);
   }
 }
+
+/* ===== Activate Confetti ===== */
+// Rain when the page is ready
+window.addEventListener("load", () => {
+  rainConfetti(200);
+});
+
+// Burst wherever the user taps/clicks
+document.addEventListener("pointerdown", (e) => {
+
+  // ignore bursts when tapping:
+  // – Smiski
+  // – Voucher
+  // – Close button
+  if (
+    e.target.closest("#asterWrap") ||
+    e.target.closest("#avarielleWrap") ||
+    e.target.closest(".voucher-inner") ||
+    e.target.classList.contains("closeBtn")
+  ) {
+    return;
+  }
+
+  // ✅ Only burst when tapping anywhere else
+  burstConfetti(e.clientX, e.clientY);
+});
+
 
 
   /* Sparkle tap pulse + voucher logic */
@@ -334,10 +428,26 @@ radial-gradient(1.26vw 1.26vw at 96% 40%, var(--cream2) 98%, #0000);
   function closeVoucher(){ vA.style.display="none"; vV.style.display="none"; }
   window.closeVoucher = closeVoucher; // keep inline onclick working
 
-document.addEventListener("pointerdown", e => {
-  // ignore clicks on voucher close button
-  if (e.target.classList.contains("closeBtn")) return;
-  pointConfetti(e.clientX, e.clientY);
+  // optional: prevent spammy overlapping rain
+let rainCooldown = false;
+function rainWave(n = 160){
+  if (rainCooldown) return;
+  rainCooldown = true;
+  rainConfetti(n);                  // <-- reuse your existing rainConfetti
+  setTimeout(()=> rainCooldown = false, 1200);
+}
+
+// update your Smiski handlers:
+aWrap.addEventListener("pointerdown", (e) => {
+  pulse(aWrap);
+  document.getElementById("voucherAster").style.display = "flex";
+  rainWave(180);  
+});
+
+vWrap.addEventListener("pointerdown", (e) => {
+  pulse(vWrap);
+  document.getElementById("voucherAvarielle").style.display = "flex";
+  rainWave(180);                    
 });
 
 
