--- a/twins.html
+++ b/twins.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>HAPPY 21ST BDAY! 🥳</title>
+<link rel="icon" type="image/png" href="cake.png">
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;600;700&display=swap" rel="stylesheet">
 <style>
   :root{
