--- a/twins.html
+++ b/twins.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>HAPPY 21ST BDAY! 🥳</title>
-<link rel="icon" type="image/png" href="cake.png">
+<link rel="icon" type="image/png" href="assets/cake.png">
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;600;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -240,12 +240,12 @@ radial-gradient(1.26vw 1.26vw at 96% 40%, var(--cream2) 98%, #0000);
 
   <!-- Smiski (left/right) -->
   <div class="smiski-wrap" id="asterWrap">
-    <img class="smiski" src="smiski-aster.png" alt="Smiski Aster">
+    <img class="smiski" src="assets/smiski-aster.png" alt="Smiski Aster">
     <span class="sparkles" aria-hidden="true"></span>
   </div>
 
   <div class="smiski-wrap" id="avarielleWrap">
-    <img class="smiski" src="smiski-avarielle.png" alt="Smiski Avarielle">
+    <img class="smiski" src="assets/smiski-avarielle.png" alt="Smiski Avarielle">
     <span class="sparkles" aria-hidden="true"></span>
   </div>
 
@@ -267,13 +267,13 @@ radial-gradient(1.26vw 1.26vw at 96% 40%, var(--cream2) 98%, #0000);
 <!-- Vouchers -->
 <div id="voucherAster" class="voucher">
   <div class="voucher-inner">
-    <img src="voucher-aster.png" alt="">
+    <img src="assets/voucher-aster.png" alt="">
     <button class="closeBtn" onclick="closeVoucher()">Close</button>
   </div>
 </div>
 <div id="voucherAvarielle" class="voucher">
   <div class="voucher-inner">
-    <img src="voucher-avarielle.png" alt="">
+    <img src="assets/voucher-avarielle.png" alt="">
     <button class="closeBtn" onclick="closeVoucher()">Close</button>
   </div>
 </div>
