--- a/susan.html
+++ b/susan.html
@@ -214,7 +214,7 @@
 
   box-shadow:
     0 0 18px rgba(191, 224, 255, 0.784) inset,
-    0 0 12px rgba(60,120,220,.25);
+    0 0 12px rgba(19, 67, 149, 0.588);
 
   position:relative;
   overflow:hidden;
@@ -282,7 +282,7 @@
 .ifc{
   position:absolute; left:66%; bottom:32%;
   width:3.4%; height:50%;
-  background: linear-gradient(180deg,#2a5fb2 0%, #1c3e82 55%, #142b60 100%);
+  background: linear-gradient(180deg,#1f1674 0%, #1c3e82 55%, #181460 100%);
   border-radius:46% 46% 0 0 / 14% 14% 8px 8px;     /* rounded crown */
    box-shadow:
     0 0 18px rgba(191, 224, 255, 0.784) inset,
@@ -315,7 +315,7 @@
   pointer-events:none;
 }
 
-.ifc .ifc-text{
+.ifc-text{
  position:absolute; top:13%; width:100%; text-align:center; opacity:.92; z-index:99;
         font-size:clamp(12px,1.7vw,18px); pointer-events:none;   /* clicks go to the .ifc container */
 }
@@ -510,7 +510,8 @@
  .pc-text{width:100%; font: 600 20px/1.4 Fredoka, system-ui, sans-serif; padding:6px 2px 2px; 
   display:flex;
   flex-direction:column;
-  justify-content:center;} 
+  justify-content:center;
+overflow:auto;} 
  .pc-text small{ display:block; margin-top:10px; opacity:.65; font-weight:500 } 
  .close{ position:absolute; top:6%; right:6%; background:#222; color:#fff; border:none; padding:10px 12px; border-radius:8px; cursor:pointer; } 
  .close-bottom{ margin-top:22px; padding:10px 16px; font-size:16px; font-weight:600; background:#222; color:#fff; border:none; border-radius:8px; cursor:pointer; position:absolute; bottom:22%; left:50%; transform:translateX(-50%); } 
@@ -563,7 +564,7 @@
 
   /* ==== Mobile tweaks ==== */
   @media (max-width: 480px){
-    .note{ width:100vw }
+    .note{ width:100vw;font-size:clamp(9px,1.7vw,12px) }
     .mail{ width:90vw; height:30vh; --cardH: min(48vh, 380px); }     
     .envelope{ width:100%; height:64%; }
     .cardPC{  width:95%; height:75%;
@@ -574,14 +575,12 @@
     .headline{font-size:clamp(12px,3.6vw,30px);
   }
   .sub{top:11%;font-size:clamp(9px,1.7vw,12px) }
-.ifc .ifc-text{top:9%;font-size:clamp(5px,1.7vw,8px) }
+.ifc-text{top:9%;font-size:clamp(4px,1.7vw,8px) }
    
-
-
-    .pc-img{ width:100%; height:100%; }
+    .pc-img{ max-height:100%; width:auto; display: block;}
     .pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
   flex-direction:column;
-  justify-content:center; }
+  justify-content:center; overflow:auto; }
     .close-bottom{ bottom:32%; }
   }
 </style>
