fixed scroll issue

--- a/susan.html
+++ b/susan.html
@@ -573,14 +573,15 @@ overflow:auto;}
     padding: 12px;
   }
     .headline{font-size:clamp(12px,3.6vw,30px);
-  }
+  }flex-start;
   .sub{top:11%;font-size:clamp(9px,1.7vw,12px) }
 .ifc-text{top:9%;font-size:clamp(4px,1.7vw,8px) }
    
     .pc-img{ max-height:100%; width:auto; display: block;}
     .pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
   flex-direction:column;
-  justify-content:center; overflow:auto; }
+  justify-content:flex-start; overflow:auto; }
+
     .close-bottom{ bottom:32%; }
   }
 </style>
