glowing ifc text

--- a/susan.html
+++ b/susan.html
@@ -315,9 +315,55 @@
   pointer-events:none;
 }
 
-.ifc-text{
- position:absolute; top:13%; width:100%; text-align:center; opacity:.92; z-index:99;
-        font-size:clamp(12px,1.7vw,18px); pointer-events:none;   /* clicks go to the .ifc container */
+.ifc-text {
+  position:absolute;
+  inset:0;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  font-size:clamp(12px, 1.6vw, 18px);
+  font-weight:700;
+  line-height:1.2;
+  cursor:pointer;
+  color:#fff;
+  text-shadow:
+    0 0 4px #fff,
+    0 0 8px #5bc0ff,
+    0 0 14px #62d2ff;
+  animation: ifcPulse 1.8s ease-in-out infinite;
+  pointer-events:auto;   /* make sure it's clickable */
+  z-index: 20;
+}
+
+.ifc-text:hover {
+  transform: scale(1.05);
+  transition: transform .25s ease;
+}
+
+@keyframes ifcPulse {
+  0% {
+    opacity: 0.75;
+    text-shadow:
+      0 0 4px #fff,
+      0 0 8px #5bc0ff,
+      0 0 14px #62d2ff;
+  }
+  50% {
+    opacity: 1;
+    text-shadow:
+      0 0 6px #fff,
+      0 0 12px #94eaff,
+      0 0 24px #a8f5ff;
+  }
+  100% {
+    opacity: 0.75;
+    text-shadow:
+      0 0 4px #fff,
+      0 0 8px #5bc0ff,
+      0 0 14px #62d2ff;
+  }
 }
 
 
