responsive screen sizes

--- a/susan.html
+++ b/susan.html
@@ -615,6 +615,31 @@ overflow:auto; scrollbar-gutter: stable;       /* avoids layout jump when scroll
 
 
   /* ==== Mobile tweaks ==== */
+    @media (max-width: 768px)
+    {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+  flex-direction:column;
+  justify-content:flex-start; overflow:auto; 
+  align-items:flex-start;}}
+
+      @media (max-width: 1024px)
+    {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+  flex-direction:column;
+  justify-content:flex-start; overflow:auto; 
+  align-items:flex-start;}}
+
+      @media (max-width: 1360px)
+    {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+  flex-direction:column;
+  justify-content:flex-start; overflow:auto; 
+  align-items:flex-start;}}
+
+     @media (max-width: 1680px)
+    {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+  flex-direction:column;
+  justify-content:flex-start; overflow:auto; 
+  align-items:flex-start;}}
+
+
   @media (max-width: 480px){
     .note{ width:100vw;font-size:clamp(9px,1.7vw,12px) }
     .mail{ width:90vw; height:30vh; --cardH: min(48vh, 380px); }     
