--- a/susan.html
+++ b/susan.html
@@ -619,25 +619,36 @@ overflow:auto; scrollbar-gutter: stable;       /* avoids layout jump when scroll
     {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
   flex-direction:column;
   justify-content:flex-start; overflow:auto; 
-  align-items:flex-start;}}
+  align-items:flex-start;}
+.ifc-text{top:10%;font-size:clamp(8px,1.7vw,12px) }}
 
       @media (max-width: 1024px)
     {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
   flex-direction:column;
   justify-content:flex-start; overflow:auto; 
-  align-items:flex-start;}}
+  align-items:flex-start;}
+.ifc-text{top:10%;font-size:clamp(14px,1.7vw,20px) }}
 
       @media (max-width: 1360px)
-    {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+    {.pc-text{ font: 600 18px/1.4 Fredoka, system-ui, sans-serif;display:flex;
   flex-direction:column;
   justify-content:flex-start; overflow:auto; 
-  align-items:flex-start;}}
+  align-items:flex-start;}
+.ifc-text{top:10%;font-size:clamp(14px,1.7vw,20px) }}
 
      @media (max-width: 1680px)
-    {.pc-text{ font: 600 16px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+    {.pc-text{ font: 600 18px/1.4 Fredoka, system-ui, sans-serif;display:flex;
   flex-direction:column;
   justify-content:flex-start; overflow:auto; 
-  align-items:flex-start;}}
+  align-items:flex-start;}
+.ifc-text{top:10%;font-size:clamp(14px,1.7vw,20px) }}
+
+       @media (max-width: 1920px)
+    {.pc-text{ font: 600 20px/1.4 Fredoka, system-ui, sans-serif;display:flex;
+  flex-direction:column;
+  justify-content:flex-start; overflow:auto; 
+  align-items:flex-start;}
+.ifc-text{top:10%;font-size:clamp(14px,1.7vw,20px) }}
 
 
   @media (max-width: 480px){
